Better fix for RSTB cutoff?

--- a/wildbits/assets/src/scss/App.scss
+++ b/wildbits/assets/src/scss/App.scss
@@ -138,7 +138,8 @@ body {
         margin: 0 7px 0 -8px;
 
         .col {
-            min-width: unset;
+            min-width: auto;
+            -ms-min-width: 0;
         }
 
         .rstb-list {
